--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.9
   flutter_tflite: ^1.0.1
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
