--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.8.9
   flutter_tflite: ^1.0.1
   lottie: ^3.1.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
