--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_tflite: ^1.0.1
   lottie: ^3.1.0
   google_fonts: ^6.1.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
